<resources>
    <string name="app_name">ClickValidation</string>
    <string name="configure_activity_label">Configure</string>

    <string name="config_button">Configurar</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="emergency_text_string">S.O.S.</string>
    <string name="bathroom_text_string">W.C.</string>
    <string name="assistence_text_string">Auxílio</string>
    <string name="thirsty_text_string">SEDE</string>
    
    <string name="select_paciente_label">Selecione uma Pessoa</string>

    <string name="select_patient_sucesfull_toast_text">foi selecionado com sucesso!</string>
    <string name="select_patient_error_toast_text">falha ao selecionar o paciente </string>

</resources>
